--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,11 +52,12 @@ android {
 
     defaultConfig {
         applicationId "com.opurex.client"
-        minSdkVersion 14
+        minSdkVersion 19
         targetSdk 34
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         versionCode 1
         versionName "1.0"
+        multiDexEnabled true
     }
 
     // compileOptions, sourceSets, etc. remain the same unless specified
@@ -207,27 +208,30 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     // Material Design 3
-    implementation 'com.google.android.material:material:1.11.0'
+    implementation 'com.google.android.material:material:1.12.0'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'androidx.core:core-ktx:1.12.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.recyclerview:recyclerview:1.3.1'
+    implementation 'androidx.core:core:1.12.0'
 
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 
     // AndroidX Core & Support Libraries
     implementation 'androidx.annotation:annotation:1.9.1' // Or latest stable version
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.legacy:legacy-support-v13:1.0.0'
+    implementation 'androidx.biometric:biometric:1.1.0'
     // Provides androidx.fragment.app.FragmentStatePagerAdapter
 
     // Your existing libraries (these are fine, no AndroidX equivalent needed)
     implementation 'com.google.code.gson:gson:2.11.0'
     implementation 'commons-io:commons-io:2.16.1'
     implementation 'com.google.zxing:core:3.5.2'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     // AndroidX Test Libraries
     // Core test utilities
