--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:smallScreens="true" />
 <!--    <uses-feature android:name="android.hardware.bluetooth" android:required="false"/>-->
 <!--    <uses-feature android:name="android.hardware.bluetooth_le" android:required="false"/>-->
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <application android:name="com.opurex.client.OpurexPOS"
         android:networkSecurityConfig="@xml/network_security_config"
         android:usesCleartextTraffic="false"
